@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.366 2006/07/03 15:19:44 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.367 2006/07/03 15:39:06 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -69,6 +69,8 @@ PH/08 When testing addresses using -bt, indicate those final addresses that
 
 PH/09 Applied patch from Erik to use select() instead of poll() in spam.c on
       systems where poll() doesn't work, in particular OS X.
+
+PH/10 Added more information to debugging output for retry time not reached.
 
 
 Exim version 4.62
